<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:icon="@drawable/rename"
            android:text="@string/rename"
            android:background="?attr/selectableItemBackground"
            app:iconGravity="top"
            android:textSize="12sp"
            android:id="@+id/renamebtn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"
            android:layout_weight="1.1"
            style="@style/Widget.AppCompat.Button.Borderless"


            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:icon="@drawable/delete"
            android:text="@string/delete"
            android:id="@+id/deleteBtn"
            android:background="?attr/selectableItemBackground"
            app:iconGravity="top"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"


            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:icon="@drawable/share"
            android:text="@string/share"
            android:background="?attr/selectableItemBackground"
            app:iconGravity="top"
            android:id="@+id/sharebtn"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"


            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:icon="@drawable/about_drawer"
            android:text="@string/info"
            android:id="@+id/detailbtn"
            android:background="?attr/selectableItemBackground"
            app:iconGravity="top"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:iconTint="?attr/themeColor"
            android:layout_weight="0.8"
            style="@style/Widget.AppCompat.Button.Borderless"


            />


</LinearLayout>