<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/list_pic"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        app:shapeAppearanceOverlay="@style/curve"

        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/list_videoname"
            android:text="@string/video_name"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:paddingHorizontal="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="80dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="5dp"
            android:layout_marginStart="80dp"
            android:gravity="center_vertical"
            android:id="@+id/list_folder"
            android:maxLines="1"
            android:text="@string/folder"
            />




    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:text="@string/_3_25"
        android:gravity="center"
        android:id="@+id/list_duration"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"

        />

</com.google.android.material.card.MaterialCardView>